# atsbench

./: .gitignore  README.md  models.yaml  pyproject.toml  workflows.yaml
.claude/skills/atsbench/: SKILL.md
docs/results/: 2026-06-21-classification-glm5.2-vs-gemini.md  2026-06-21-rag-qa-glm5.2-vs-gemini.md
docs/superpowers/plans/: 2026-06-21-atsbench-classification-workflow.md  2026-06-21-atsbench-core-harness.md  2026-06-21-atsbench-rag-qa-workflow.md
docs/superpowers/specs/: 2026-06-21-atsbench-benchmarking-harness-design.md  2026-06-21-atsbench-classification-workflow-design.md  2026-06-21-atsbench-rag-qa-workflow-design.md
fixtures/classification/: MANIFEST.md  build.py  dataset.jsonl  system_prompt.txt
fixtures/rag_qa/: MANIFEST.md  dataset.jsonl  dataset_factcheck.md  system_prompt.txt
src/atsbench/: __init__.py  cli.py  config.py  metrics.py  scorecard.py
src/atsbench/fixtures/: filename_labels.py  pdf_text.py
src/atsbench/report/: aggregate.py  build.py  render.py
src/atsbench/scorers/: classification.py  exact_match.py  rag_qa.py
src/atsbench/tasks/: classification.py  rag_qa.py  smoke.py
tests/: test_aggregate.py  test_aggregate_headline.py  test_classification_scorer.py  test_classification_task.py  test_config.py  test_end_to_end.py  test_exact_match.py  test_filename_labels.py  test_metrics.py  test_pdf_text.py  test_rag_qa_scorer.py  test_rag_qa_task.py  test_render.py  test_samples_from_log.py  test_scorecard.py  test_smoke_import.py
tests/fixtures/: classification_smoke.jsonl  rag_qa_smoke.jsonl
