[project]
name = "atsbench"
version = "0.1.0"
description = "Benchmark any LLM against Aeontsolutions' real workflows on three axes: accurate, fast, affordable."
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3.50",
    "pydantic>=2.6",
    "pypdf>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
atsbench = "atsbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atsbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
